Package: aroma.apd
==================

Version: 0.4.1 [2014-01-05]
o Now celToApd() throws a more informative error message if it fails
  to located an APD map file.
o Now the 'aroma.apd' Package object is also available when the
  package is only loaded (but not attached).
o CLEANUP: Removed unnecessary import statements from NAMESPACE.
o ROBUSTNESS: Some of the examples assumed that the suggested
  'affxparser' was installed and attached.
o BUG FIX: celToApd() assumed that affxparser was already attached.
o Bumped up package version requirements.


Version: 0.4.0 [2013-09-21]
o CLEANUP: Removed fallback attachments of 'R.utils' and 'R.huge' as
  these are no longer needed with R.oo (>= 1.15.1).
o CLEANUP: Package no longer utilizes import(), only importFrom():s.
o CLEANUP: Now only using 'Authors@R' in DESCRIPTION, which is possible
  since R (>= 2.14.0).
o CLEANUP: Dropped obsolete R (< 2.0.0) code that was never used.
o BUG FIX: cdfToApdMap() did not validate and assign argument 'verbose'.
o BUG FIX: Forgot to import trim() from 'R.oo'.


Version: 0.3.0 [2013-08-02]
o CLEANUP: Package no longer attaches/loads R.utils and R.huge (only
  imports them).   However, they will be attached dynamically, when
  certain methods are called.
o Utilizing new startupMessage() of R.oo.
o BUG FIX: Several functions incorrectly assumed that the affxparser
  package had been attached ("loaded").  Although this is almost always
  the case, because this package is only used by aroma.affymetrix which
  loads affxparser, this was an incorrect assumption.


Version: 0.2.5 [2013-05-25]
o Minor speedup by replacing rm() calls with NULL assignments.


Version: 0.2.4 [2013-05-22]
o CRAN POLICY: Now all Rd \usage{} lines are at most 90 characters long.


Version: 0.2.3 [2012-06-30]
o Updated package dependencies.


Version: 0.2.2 [2012-04-04]
o Now package only imports R.methodsS3.


Version: 0.2.1 [2012-04-01]
o CLEANUP: Now package no longer gives an 'R CMD check' NOTE that